# phishgard

./: AUTH_README.md  Dockerfile  Makefile  docker-compose.yml  init_db.py  messages.pot  nginx.conf  pyproject.toml  requirements.txt  run.py
app/: __init__.py  extensions.py
app/core/: config.py
app/models/: __init__.py  rbac.py  simulation.py  user.py
app/static/css/: style.css
app/templates/: base.html
app/templates/admin/: analytics.html  dashboard.html  permissions.html  relationships.html  role_detail.html  roles.html  settings.html  user_detail.html  users.html
app/templates/auth/: admin.html  change_password.html  edit_profile.html  edit_profile_tabs.html  email_verification_failed.html  email_verified.html  login.html  profile.html  register.html  user_detail.html
app/templates/components/: sidebar_nav.html
app/templates/emails/: reset_password.html  reset_password.txt  verify_email.html  verify_email.txt  welcome.html  welcome.txt
app/templates/layouts/: app.html  auth.html  landing.html
app/templates/main/: index.html
app/templates/simulation/: bulk_upload_employees.html  campaign_detail.html  campaigns.html  create_campaign.html  create_email_template.html  create_employee.html  dashboard.html  (+15 more)
app/utils/: ai_chat_service.py  email_service.py  init_db.py  link_analyzer_service.py  rbac_manager.py  simulation_service.py  upload_service.py
app/views/: __init__.py
instance/: app.db  site.db
migrations/versions/: 89972f34b22c_add_email_verification_fields_to_user_.py
scripts/: build_docker.sh
typings/flask_babel/: __init__.pyi
(+11 files in other folders)
